--- a/matisse/src/main/res/layout/activity_media_preview.xml
+++ b/matisse/src/main/res/layout/activity_media_preview.xml
@@ -16,6 +16,7 @@
   -->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:tools="http://schemas.android.com/tools"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
@@ -67,7 +68,7 @@
 
                 <com.zhihu.matisse.internal.ui.widget.CheckRadioView
                     android:id="@+id/original"
-                    android:src="@drawable/ic_preview_radio_off"
+                    app:srcCompat="@drawable/ic_preview_radio_off"
                     android:layout_gravity="center_vertical"
                     android:tint="#ffffff"
                     android:layout_width="16dp"
